starting with the main page layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
         <link rel="stylesheet" href="./styles/media-queries.css">
     </head>
     <body>
+        <div class="body-container">
+            <div class="main-page">
+                <div class="login-message">
+                    hello 
+                </div>
+                <div class="login-form">
+                    goodbye
+                </div>
+            </div>
+            <div class="footer">
         
+            </div>
+        </div>
     </body>
 </html>
