fixing and testing the layout

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <body>
         <div class="body-container">
             <div class="main-page">
-                <div class="login-message">
-                    hello 
-                </div>
-                <div class="login-form">
-                    goodbye
+                <div class="main-page-container">
+                    <div class="login-message">
+                        hello 
+                    </div>
+                    <div class="login-form">
+                        goodbye
+                    </div>
                 </div>
             </div>
             <div class="footer">
