adding the log-in message section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
             <div class="main-page">
                 <div class="main-page-container">
                     <div class="login-message">
-                        hello 
+                        <div class="fb-logo">
+                            <img alt="fb-logo" src="./assets/fb-logo.svg" height="106px" width="auto">
+                        </div>
+                            <h2> Facebook helps you connect and share with the people in your life. </h2>
+                        
                     </div>
                     <div class="login-form">
                         goodbye
