adding part of the login form section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@
                         
                     </div>
                     <div class="login-form">
-                        goodbye
+                        <div class="login-form-section">
+                            <div class="cridentials-box">
+                                <input type="text" placeholder="Email address or phone number" name="uname" required>
+                            </div>
+                            <div class="cridentials-box">
+                                <input type="password" placeholder="Password" name="psw" required>
+                            </div>
+                            <div class="login-button-box">
+                                <button class="login-button">Log In</button>
+                            </div>
+                            <div class="forgot-password-box">Forgotten password?</div>
+                            <div class="horizontal-line"> <hr> </div>
+                            <div class="signup-button-box">
+                                <button class="signup-button">Create New Account</button>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
