finalizing the login section

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                             <h2> Facebook helps you connect and share with the people in your life. </h2>
                         
                     </div>
-                    <div class="login-form">
-                        <div class="login-form-section">
+                    <div class="login-form-section">
+                        <form class="login-form">
                             <div class="cridentials-box">
                                 <input type="text" placeholder="Email address or phone number" name="uname" required>
                             </div>
@@ -28,12 +28,13 @@
                                 <button class="login-button">Log In</button>
                             </div>
                             <div class="forgot-password-box">Forgotten password?</div>
-                            <div class="horizontal-line"> <hr> </div>
+                            <div class="horizontal-line"> <hr style="height:1px"> </div>
                             <div class="signup-button-box">
                                 <button class="signup-button">Create New Account</button>
-                            </div>
-
-                        </div>
+                        </form>
+                    </div>
+                    <div class="brand-message">
+                        <a href="/pages/create/?ref_type=registration_form"><b> Create a Page </b></a>  for a celebrity, brand or business.
                     </div>
                 </div>
             </div>
