finalizing the login form and adding the footer section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title> Facebook - login or sign up</title>
         <link rel="stylesheet" href="./styles/styles.css">
         <link rel="stylesheet" href="./styles/media-queries.css">
+        <script src="https://kit.fontawesome.com/1ff5291ea3.js" crossorigin="anonymous"></script> <!--importing fontawesome icons-->
     </head>
     <body>
         <div class="body-container">
@@ -38,9 +39,54 @@
                     </div>
                 </div>
             </div>
-            <div class="footer">
-        
-            </div>
+        </div>
+        <div class="footer">
+            <ul class="languages">
+                <li> English (UK) </li>
+                <li><a href="https://ar-ar.facebook.com/"> العربية </a></li>
+                <li><a href="https://fr-fr.facebook.com/"> Français (France) </a></li>
+                <li><a href="https://de-de.facebook.com/"> Deutsch </a></li>
+                <li><a href="https://es-la.facebook.com/"> Español </a></li>
+                <li><a href="https://ru-ru.facebook.com/"> Русский </a></li>
+                <li><a href="https://pt-br.facebook.com/"> Português (Brasil) </a></li>
+                <li><a href="https://it-it.facebook.com/"> Italiano </a></li>
+                <li><a href="https://hi-in.facebook.com/"> हिन्दी </a></li>
+                <li><a href="https://zh-cn.facebook.com/"> 中文(简体) </a></li>
+                <li><a href="https://ja-jp.facebook.com/"> 日本語 </a></li>
+                <li><button><i class="fa-solid fa-plus"></i></button></li>
+            </ul>
+            <hr style="width:100%">
+            <ul class="external-links">
+                <li><a href="/reg/"> Sign Up </a></li>
+                <li><a href="/login/"> Log In </a></li>
+                <li><a href="https://messenger.com/"> Messenger </a></li>
+                <li><a href="/lite/"> Facebook Lite </a></li>
+                <li><a href="https://www.facebook.com/watch/"> Watch </a></li>
+                <li><a href="/places/"> Places </a></li>
+                <li><a href="/games/"> Games</a></li>
+                <li><a href="/marketplace/"> Marketplace </a></li>
+                <li><a href="https://pay.facebook.com/"> Facebook Pay </a></li>
+                <li><a href="https://www.oculus.com/"> Oculus </a></li>
+                <li><a href="https://portal.facebook.com/"> Portal </a></li>
+                <li><a href="https://www.instagram.com/"> Instagram </a></li>
+                <li><a href="https://www.bulletin.com/"> Bulletin </a></li>
+                <li><a href="/local/lists/245019872666104/"> Local </a></li>
+                <li><a href="/fundraisers/"> Fundraisers </a></li>
+                <li><a href="/biz/directory/"> Services </a></li>
+                <li><a href="/votinginformationcenter/?entry_point=c2l0ZQ%3D%3D"> Voting Information Centre </a></li>
+                <li><a href="/groups/explore/"> Groups </a></li>
+                <li><a href="https://about.facebook.com/"> About</a></li>
+                <li><a href="/ad_campaign/landing.php?placement=pflo&campaign_id=402047449186&nav_source=unknown&extra_1=auto"> Create Ad </a></li>
+                <li><a href="/pages/create/?ref_type=site_footer"> Create Page </a></li>
+                <li><a href="https://developers.facebook.com/?ref=pf"> Developers </a></li>
+                <li><a href="/careers/?ref=pf"> Careers </a></li>
+                <li><a href="/privacy/explanation/"> Privacy </a></li>
+                <li><a href="/policies/cookies/"> Cookies </a></li>
+                <li><a href="https://www.facebook.com/help/568137493302217"> AdChoices </a></li>
+                <li><a href="/policies?ref=pf"> Terms </a></li>
+                <li><a href="/help/?ref=pf"> Help </a></li>
+
+            </ul>
         </div>
     </body>
 </html>
