aligning the footer section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
         </div>
         <div class="footer">
+            <div class="footer-container">
             <ul class="languages">
                 <li> English (UK) </li>
                 <li><a href="https://ar-ar.facebook.com/"> العربية </a></li>
@@ -55,7 +56,7 @@
                 <li><a href="https://ja-jp.facebook.com/"> 日本語 </a></li>
                 <li><button><i class="fa-solid fa-plus"></i></button></li>
             </ul>
-            <hr style="width:100%">
+            <div class="horizontal-line"><hr></div>
             <ul class="external-links">
                 <li><a href="/reg/"> Sign Up </a></li>
                 <li><a href="/login/"> Log In </a></li>
@@ -85,8 +86,9 @@
                 <li><a href="https://www.facebook.com/help/568137493302217"> AdChoices </a></li>
                 <li><a href="/policies?ref=pf"> Terms </a></li>
                 <li><a href="/help/?ref=pf"> Help </a></li>
-
             </ul>
+            <div class="meta-copyright">  Meta © 2022 </div>
+        </div>
         </div>
     </body>
 </html>
