--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
                         <div class="fb-logo">
                             <img alt="fb-logo" src="./assets/fb-logo.svg" height="106px" width="auto">
                         </div>
-                            <h2> Facebook helps you connect and share with the people in your life. </h2>
-                        
+                            <h2> Facebook helps you connect and share with the people in your life. </h2>  
                     </div>
                     <div class="login-form-section">
                         <form class="login-form">
@@ -32,63 +31,64 @@
                             <div class="horizontal-line"> <hr style="height:1px"> </div>
                             <div class="signup-button-box">
                                 <button class="signup-button">Create New Account</button>
+                            </div>
                         </form>
-                    </div>
-                    <div class="brand-message">
-                        <a href="/pages/create/?ref_type=registration_form"><b> Create a Page </b></a>  for a celebrity, brand or business.
+                        <div class="brand-message">
+                            <a href="/pages/create/?ref_type=registration_form"><b> Create a Page </b></a>  for a celebrity, brand or business.
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="footer">
-            <div class="footer-container">
-            <ul class="languages">
-                <li> English (UK) </li>
-                <li><a href="https://ar-ar.facebook.com/"> العربية </a></li>
-                <li><a href="https://fr-fr.facebook.com/"> Français (France) </a></li>
-                <li><a href="https://de-de.facebook.com/"> Deutsch </a></li>
-                <li><a href="https://es-la.facebook.com/"> Español </a></li>
-                <li><a href="https://ru-ru.facebook.com/"> Русский </a></li>
-                <li><a href="https://pt-br.facebook.com/"> Português (Brasil) </a></li>
-                <li><a href="https://it-it.facebook.com/"> Italiano </a></li>
-                <li><a href="https://hi-in.facebook.com/"> हिन्दी </a></li>
-                <li><a href="https://zh-cn.facebook.com/"> 中文(简体) </a></li>
-                <li><a href="https://ja-jp.facebook.com/"> 日本語 </a></li>
-                <li><button><i class="fa-solid fa-plus"></i></button></li>
-            </ul>
-            <div class="horizontal-line"><hr></div>
-            <ul class="external-links">
-                <li><a href="/reg/"> Sign Up </a></li>
-                <li><a href="/login/"> Log In </a></li>
-                <li><a href="https://messenger.com/"> Messenger </a></li>
-                <li><a href="/lite/"> Facebook Lite </a></li>
-                <li><a href="https://www.facebook.com/watch/"> Watch </a></li>
-                <li><a href="/places/"> Places </a></li>
-                <li><a href="/games/"> Games</a></li>
-                <li><a href="/marketplace/"> Marketplace </a></li>
-                <li><a href="https://pay.facebook.com/"> Facebook Pay </a></li>
-                <li><a href="https://www.oculus.com/"> Oculus </a></li>
-                <li><a href="https://portal.facebook.com/"> Portal </a></li>
-                <li><a href="https://www.instagram.com/"> Instagram </a></li>
-                <li><a href="https://www.bulletin.com/"> Bulletin </a></li>
-                <li><a href="/local/lists/245019872666104/"> Local </a></li>
-                <li><a href="/fundraisers/"> Fundraisers </a></li>
-                <li><a href="/biz/directory/"> Services </a></li>
-                <li><a href="/votinginformationcenter/?entry_point=c2l0ZQ%3D%3D"> Voting Information Centre </a></li>
-                <li><a href="/groups/explore/"> Groups </a></li>
-                <li><a href="https://about.facebook.com/"> About</a></li>
-                <li><a href="/ad_campaign/landing.php?placement=pflo&campaign_id=402047449186&nav_source=unknown&extra_1=auto"> Create Ad </a></li>
-                <li><a href="/pages/create/?ref_type=site_footer"> Create Page </a></li>
-                <li><a href="https://developers.facebook.com/?ref=pf"> Developers </a></li>
-                <li><a href="/careers/?ref=pf"> Careers </a></li>
-                <li><a href="/privacy/explanation/"> Privacy </a></li>
-                <li><a href="/policies/cookies/"> Cookies </a></li>
-                <li><a href="https://www.facebook.com/help/568137493302217"> AdChoices </a></li>
-                <li><a href="/policies?ref=pf"> Terms </a></li>
-                <li><a href="/help/?ref=pf"> Help </a></li>
-            </ul>
-            <div class="meta-copyright">  Meta © 2022 </div>
-        </div>
+            <div class="footer">
+                <div class="footer-container">
+                    <ul class="languages">
+                        <li> English (UK) </li>
+                        <li><a href="https://ar-ar.facebook.com/"> العربية </a></li>
+                        <li><a href="https://fr-fr.facebook.com/"> Français (France) </a></li>
+                        <li><a href="https://de-de.facebook.com/"> Deutsch </a></li>
+                        <li><a href="https://es-la.facebook.com/"> Español </a></li>
+                        <li><a href="https://ru-ru.facebook.com/"> Русский </a></li>
+                        <li><a href="https://pt-br.facebook.com/"> Português (Brasil) </a></li>
+                        <li><a href="https://it-it.facebook.com/"> Italiano </a></li>
+                        <li><a href="https://hi-in.facebook.com/"> हिन्दी </a></li>
+                        <li><a href="https://zh-cn.facebook.com/"> 中文(简体) </a></li>
+                        <li><a href="https://ja-jp.facebook.com/"> 日本語 </a></li>
+                        <li><button class="more-languages-button"><i class="fa-solid fa-plus"></i></button></li>
+                    </ul>
+                    <div class="horizontal-line"><hr></div>
+                    <ul class="external-links">
+                        <li><a href="/reg/"> Sign Up </a></li>
+                        <li><a href="/login/"> Log In </a></li>
+                        <li><a href="https://messenger.com/"> Messenger </a></li>
+                        <li><a href="/lite/"> Facebook Lite </a></li>
+                        <li><a href="https://www.facebook.com/watch/"> Watch </a></li>
+                        <li><a href="/places/"> Places </a></li>
+                        <li><a href="/games/"> Games</a></li>
+                        <li><a href="/marketplace/"> Marketplace </a></li>
+                        <li><a href="https://pay.facebook.com/"> Facebook Pay </a></li>
+                        <li><a href="https://www.oculus.com/"> Oculus </a></li>
+                        <li><a href="https://portal.facebook.com/"> Portal </a></li>
+                        <li><a href="https://www.instagram.com/"> Instagram </a></li>
+                        <li><a href="https://www.bulletin.com/"> Bulletin </a></li>
+                        <li><a href="/local/lists/245019872666104/"> Local </a></li>
+                        <li><a href="/fundraisers/"> Fundraisers </a></li>
+                        <li><a href="/biz/directory/"> Services </a></li>
+                        <li><a href="/votinginformationcenter/?entry_point=c2l0ZQ%3D%3D"> Voting Information Centre </a></li>
+                        <li><a href="/groups/explore/"> Groups </a></li>
+                        <li><a href="https://about.facebook.com/"> About</a></li>
+                        <li><a href="/ad_campaign/landing.php?placement=pflo&campaign_id=402047449186&nav_source=unknown&extra_1=auto"> Create Ad </a></li>
+                        <li><a href="/pages/create/?ref_type=site_footer"> Create Page </a></li>
+                        <li><a href="https://developers.facebook.com/?ref=pf"> Developers </a></li>
+                        <li><a href="/careers/?ref=pf"> Careers </a></li>
+                        <li><a href="/privacy/explanation/"> Privacy </a></li>
+                        <li><a href="/policies/cookies/"> Cookies </a></li>
+                        <li><a href="https://www.facebook.com/help/568137493302217"> AdChoices </a></li>
+                        <li><a href="/policies?ref=pf"> Terms </a></li>
+                        <li><a href="/help/?ref=pf"> Help </a></li>
+                    </ul>
+                    <div class="meta-copyright">  Meta © 2022 </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
