aligning the meain page section

--- a/index.html
+++ b/index.html
@@ -10,31 +10,33 @@
         <div class="body-container">
             <div class="main-page">
                 <div class="main-page-container">
-                    <div class="login-message">
-                        <div class="fb-logo">
-                            <img alt="fb-logo" src="./assets/fb-logo.svg" height="106px" width="auto">
+                    <div class="main-page-flex-container">
+                        <div class="login-message">
+                            <div class="fb-logo">
+                                <img alt="fb-logo" src="./assets/fb-logo.svg" height="106px" width="auto">
+                            </div>
+                                <h2> Facebook helps you connect and share with the people in your life. </h2>  
                         </div>
-                            <h2> Facebook helps you connect and share with the people in your life. </h2>  
-                    </div>
-                    <div class="login-form-section">
-                        <form class="login-form">
-                            <div class="cridentials-box">
-                                <input type="text" placeholder="Email address or phone number" name="uname" required>
+                        <div class="login-form-section">
+                            <form class="login-form">
+                                <div class="cridentials-box">
+                                    <input type="text" placeholder="Email address or phone number" name="uname" required>
+                                </div>
+                                <div class="cridentials-box">
+                                    <input type="password" placeholder="Password" name="psw" required>
+                                </div>
+                                <div class="login-button-box">
+                                    <button class="login-button">Log In</button>
+                                </div>
+                                <div class="forgot-password-box">Forgotten password?</div>
+                                <div class="horizontal-line"> <hr style="height:1px"> </div>
+                                <div class="signup-button-box">
+                                    <button class="signup-button">Create New Account</button>
+                                </div>
+                            </form>
+                            <div class="brand-message">
+                                <a href="/pages/create/?ref_type=registration_form"><b> Create a Page </b></a>  for a celebrity, brand or business.
                             </div>
-                            <div class="cridentials-box">
-                                <input type="password" placeholder="Password" name="psw" required>
-                            </div>
-                            <div class="login-button-box">
-                                <button class="login-button">Log In</button>
-                            </div>
-                            <div class="forgot-password-box">Forgotten password?</div>
-                            <div class="horizontal-line"> <hr style="height:1px"> </div>
-                            <div class="signup-button-box">
-                                <button class="signup-button">Create New Account</button>
-                            </div>
-                        </form>
-                        <div class="brand-message">
-                            <a href="/pages/create/?ref_type=registration_form"><b> Create a Page </b></a>  for a celebrity, brand or business.
                         </div>
                     </div>
                 </div>
