finializing minor changes

--- a/index.html
+++ b/index.html
@@ -8,28 +8,32 @@
     </head>
     <body>
         <div class="body-container">
-            <div class="main-page">
-                <div class="main-page-container">
-                    <div class="main-page-flex-container">
+            <!--start main page-->
+            <div class="main-page-container">
+                <div class="main-page">
+                    <div class="main-page-content-container">
+                        <!--start login message-->
                         <div class="login-message">
                             <div class="fb-logo">
-                                <img alt="fb-logo" src="./assets/fb-logo.svg" height="106px" width="auto">
+                                <img alt="fb-logo" src="./assets/fb-logo-cropped.svg">
                             </div>
                                 <h2> Facebook helps you connect and share with the people in your life. </h2>  
                         </div>
+                        <!--end login message-->
+                        <!--start login form section-->
                         <div class="login-form-section">
                             <form class="login-form">
                                 <div class="cridentials-box">
-                                    <input type="text" placeholder="Email address or phone number" name="uname" required>
+                                    <input type="text" placeholder="Email address or phone number" name="uname">
                                 </div>
                                 <div class="cridentials-box">
-                                    <input type="password" placeholder="Password" name="psw" required>
+                                    <input type="password" placeholder="Password" name="psw">
                                 </div>
                                 <div class="login-button-box">
                                     <button class="login-button">Log In</button>
                                 </div>
                                 <div class="forgot-password-box">Forgotten password?</div>
-                                <div class="horizontal-line"> <hr style="height:1px"> </div>
+                                <div class="horizontal-line"> <hr> </div>
                                 <div class="signup-button-box">
                                     <button class="signup-button">Create New Account</button>
                                 </div>
@@ -38,11 +42,15 @@
                                 <a href="/pages/create/?ref_type=registration_form"><b> Create a Page </b></a>  for a celebrity, brand or business.
                             </div>
                         </div>
+                        <!--end login form section-->
                     </div>
                 </div>
             </div>
+            <!--end main page-->
+            <!--start footer-->
             <div class="footer">
                 <div class="footer-container">
+                    <!--start language-->
                     <ul class="languages">
                         <li> English (UK) </li>
                         <li><a href="https://ar-ar.facebook.com/"> العربية </a></li>
@@ -57,7 +65,9 @@
                         <li><a href="https://ja-jp.facebook.com/"> 日本語 </a></li>
                         <li><button class="more-languages-button"><i class="fa-solid fa-plus"></i></button></li>
                     </ul>
+                    <!--end languages-->
                     <div class="horizontal-line"><hr></div>
+                    <!--start external links-->
                     <ul class="external-links">
                         <li><a href="/reg/"> Sign Up </a></li>
                         <li><a href="/login/"> Log In </a></li>
@@ -88,6 +98,7 @@
                         <li><a href="/policies?ref=pf"> Terms </a></li>
                         <li><a href="/help/?ref=pf"> Help </a></li>
                     </ul>
+                    <!--end external links-->
                     <div class="meta-copyright">  Meta © 2022 </div>
                 </div>
             </div>
