adding the forgotten password link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                                 <div class="login-button-box">
                                     <button class="login-button">Log In</button>
                                 </div>
-                                <div class="forgot-password-box">Forgotten password?</div>
+                                <div class="forgot-password-box">
+                                    <a href="https://www.facebook.com/login/identify/?ctx=recover&ars=facebook_login&from_login_screen=0">
+                                        Forgotten password? </a>
+                                </div>
                                 <div class="horizontal-line"> <hr> </div>
                                 <div class="signup-button-box">
                                     <button class="signup-button">Create New Account</button>
